Add loading-gif to /static/ & load it from there.

--- a/app/core/templates/core/lookuplotnums.html
+++ b/app/core/templates/core/lookuplotnums.html
@@ -39,164 +39,11 @@
                 </thead>
             </table>
         </div>
-        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
+        <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
     </div>
 
   {% endblock content %}
 <!-- End Body -->
 {% block belowdeckscripts %}
-<script>
-    try {
-        $( function() {
-            const availableItemDesc = [
-                {% for itemd in itemcode_queryset %}
-                    "{{itemd.component_desc}}",
-                {% endfor %}
-            ];
-            const availableItemCodes = [
-                {% for item in itemcode_queryset %}
-                    "{{item.component_itemcode}}",
-                {% endfor %}
-            ];
-            // ===============  Item Number Search  ===============
-            let $partNumber = $("#id_part_number");
-            let $itemDescription = $("#noreallywtfisit")
-            $partNumber.autocomplete({ // Sets up a dropdown for the part number field 
-                minLength: 2,
-                autoFocus: true,
-                source: function (request, response) {
-                    let results = $.ui.autocomplete.filter(availableItemCodes, request.term);
-                    response(results.slice(0,10));
-                },
-                change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
-                    $itemDescription.val("");
-                    $('#whatarethelotnums').text("");
-                    $('.animation').toggle();
-                    $partNumber.addClass('loading');
-                    $itemDescription.addClass('loading');
-                    var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
-                    $.getJSON('itemcodedesc_request_itemcode/',{item:item}, // send json request with part number in request url
-                        function(data) {
-                            console.log("change")
-                            console.log(data)
-                            $itemDescription.val(data.description); // Update desc value
-                            $('#whatarethelotnums').text();
-                            return;
-                    })
-                        //.fail(function() { // err handle
-                        //    console.log("Part Number field is blank or not found");
-                        //    $('#noreallywtfisit').text("uhhh");
-                        //    $('#wherethefuckisit').text("Part Number field is blank or not found");
-                        //})
-                        .always(function() {
-                            $('.animation').toggle();
-                            $partNumber.removeClass('loading');
-                            $itemDescription.removeClass('loading');
-                        })
-                },
-                select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
-                    $itemDescription.val("");
-                    $('#wherethefuckisit').text("");
-                    $('.animation').toggle();
-                    $partNumber.addClass('loading');
-                    $itemDescription.addClass('loading');
-                    var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
-                    $.getJSON('itemcodedesc_request_itemcode/',{item:item}, // send json request with part number in request url
-                        function(data) {
-                            console.log("select")
-                            console.log(data)
-                            $itemDescription.val(data.description); // Update desc value
-                            $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
-                            return;
-                        })
-                        //.fail(function() { // err handle
-                        //    console.log("Part Number field is blank or not found");
-                        //    $('#noreallywtfisit').text("uhhh");
-                        //    $('#wherethefuckisit').text("Part Number field is blank or not found");
-                        //})
-                        .always(function() {
-                            $('.animation').toggle();
-                            $partNumber.removeClass('loading');
-                            $itemDescription.removeClass('loading');
-                        })
-                },
-            });
-            //   ===============  Description Search  ===============
-            $itemDescription.autocomplete({ // Sets up a dropdown for the part number field 
-                minLength: 3,
-                autoFocus: true,
-                source: function (request, response) {
-                    let results = $.ui.autocomplete.filter(availableItemDesc, request.term);
-                    response(results.slice(0,300));
-                },
-                change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
-                    $partNumber.val("");
-                    $partNumber.addClass('loading');
-                    $itemDescription.addClass('loading');
-                    $('#wherethefuckisit').text("");
-                    $('.animation').toggle();
-                    try { var item = ui.item.label;
-                    } catch {
-                        var item = $itemDescription.val();
-                    }
-                    $.getJSON('itemcodedesc_request_desc/',{item:item}, // send json request with description in request url
-                        function(data) {
-                            try {
-                            console.log("change")
-                            console.log(data)
-                            $partNumber.val(data.reqItemCode); // Update part number value
-                            $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
-                            return;
-                            } catch {
-                                console.log("Description field is blank or not found");
-                                $('.animation').toggle();
-                                $partNumber.removeClass('loading');
-                                $itemDescription.removeClass('loading');
-                                $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
-                            }
-                    })
-                    .fail(function() { // err handle
-                        console.log("Description field is blank or not found");
-                        $('#wherethefuckisit').text("Item not found");
-                    })
-                    .always(function() {
-                        $('.animation').toggle();
-                        $partNumber.removeClass('loading');
-                        $itemDescription.removeClass('loading');
-                    })
-                },
-                select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
-                    $partNumber.val("");
-                    $('#wherethefuckisit').text("");
-                    $('.animation').toggle();
-                    $partNumber.addClass('loading');
-                    $itemDescription.addClass('loading');
-                    var item = ui.item.label
-                    $.getJSON('itemcodedesc_request_desc/',{item:item}, // send json request with description in request url
-                        function(data) {
-                            console.log("change")
-                            console.log(data)
-                            $partNumber.val(data.reqItemCode); // Update part number value
-                            $('#wherethefuckisit').text(data.general_location + ", " + data.specific_location);
-                            return;
-                        })
-                        //.fail(function() { // err handle
-                        //    console.log("Part Number field is blank or not found");
-                        //    $('#noreallywtfisit').text("uhhh");
-                        //    $('#wherethefuckisit').text("Part Number field is blank or not found");
-                        //})
-                        .always(function() {
-                            $('.animation').toggle();
-                            $partNumber.removeClass('loading');
-                            $itemDescription.removeClass('loading');
-                        })
-                },
-            });
-        });
-    } catch (pnError) {
-        console.log(pnError)
-    };
-
-
-</script>
+    <script src="{% static 'core/js/descriptionLookup.js' %}"></script>
 {% endblock %}
