--- a/app/core/templates/core/lookuplocation.html
+++ b/app/core/templates/core/lookuplocation.html
@@ -28,7 +28,7 @@
         <div id="id_location"><em>Use search fields to display chemical locations.</em></div>
         <h4>Quantity On Hand:</h4>
         <div id="id_quantity"><em>Quantity will appear here.</em></div>
-        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
+        <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
     </div>
 
   {% endblock content %}
