--- a/app/core/templates/core/tanklevels.html
+++ b/app/core/templates/core/tanklevels.html
@@ -32,7 +32,7 @@
                     <th scope="col" class='text-center'>Fill Pct</th>
                 </tr>
                 <tbody>
-                    <td><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></td>
+                    <td><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></td>
                 </tbody>
             </thead>
         </table>
