--- a/app/prodverse/templates/prodverse/lookupitem.html
+++ b/app/prodverse/templates/prodverse/lookupitem.html
@@ -34,7 +34,7 @@
         }
 
         .loading {
-            background-image: url("https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif");
+            background-image: url("{% static 'core/media/loading-gif.gif' %}");
             background-repeat: no-repeat;
             background-size: 20px 20px;
         }
@@ -49,7 +49,7 @@
 
         <h2>Qty On Hand:</h2>
         <div id="id_quantity"><em>Use search fields to display qty on hand.</em></div>
-        <div class="animation" style="display:none;"><img src="https://media.tenor.com/On7kvXhzml4AAAAj/loading-gif.gif" height="20" width="20"></img></div>
+        <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
     </div>
   {% endblock content %}
 <!-- End Body -->
