Finalize lookup functions and create tankLevels.js

--- a/app/core/templates/core/lotnumform.html
+++ b/app/core/templates/core/lotnumform.html
@@ -36,6 +36,6 @@
     </script>
   {% endblock content %}
 <!-- End Body -->
-{% comment %} {% block belowdeckscripts %}
+{% block belowdeckscripts %}
     <script src="{% static 'core/js/descriptionLookup.js' %}"></script>
-{% endblock %} {% endcomment %}
+{% endblock %}
