Insert kpk logo back into the base.html template.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,8 +24,8 @@
             <!--Navbar-->
             <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" style="z-index: 9999 !important;">
                 <div class="container">
-                    
-                    <a class="navbar-brand mr-4" href="/" style="padding-left:15px"><img src="{% static 'core/kpklogo.png' %}" height=40px width=40px >KPK-App</a>
+                    <img src="{% static 'core/kpklogo.png' %}" height=40px width=40px >
+                    <a class="navbar-brand mr-4" href="/" style="padding-left:15px">KPK-App</a>
                     <!--Collapse button-->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>    
                         <!--Collapsable content-->
