--- a/app/core/templates/core/countrecords.html
+++ b/app/core/templates/core/countrecords.html
@@ -1,17 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}<title>Count History</title>{% endblock %}
-
+{% block scripts %}<link rel="stylesheet" type="text/css" href ="{% static 'core/countrecords.css' %}">{% endblock %}
 
 {% block content %}
     <div class='text-center'>
         <h1>Full Count History</h1>
-        <br/><br/> 
+        <br/><br/>
+        <btn id="create-report" class="btn btn-secondary" style="display:none;">Generate Count Report</btn>
+        <br/><br/>
     </div>
         <div class="table-responsive-sm">
             <table class="table text-left table-bordered">
                 <thead class="thead-dark">
                     <tr>
+                        <th scope="col"></th>
                         <th scope="col">Blend</th>
                         <th scope="col">Description</th>
                         <th scope="col">Expected Qty</th>
@@ -23,6 +26,9 @@
                 </thead>
                 {% for item in current_page.object_list %}
                     <tr>
+                        <td class='text-center'>
+                            <input type="checkbox" name={{ item.id }} class="reportCheckBox"></input>
+                        </td>
                         <td>{{ item.part_number }}</td>
                         <td>{{ item.part_description }}</td>
                         <td>{{ item.expected_quantity|floatformat:0 }}</td>
@@ -38,13 +44,16 @@
                 {% endfor %}
             </table>
         </div>
-        <div id="page-links">
+        <div id="page-links" class='text-center'>
             {% if current_page.has_previous %}
                 <a href="/core/countrecords/?page={{ current_page.previous_page_number }}">Previous Page</a>
             {% endif %}
             {% if current_page.has_next %}
                 <a href="/core/countrecords/?page={{ current_page.next_page_number }}">Next Page</a>
             {% endif %}
+            <div>
+                Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
+            </div>
         </div>
         
         
@@ -53,17 +62,17 @@
             <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Confirm Deletion</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title" id="exampleModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                Are you sure you want to delete this record?
+                    Are you sure you want to delete this record?
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <a id="modalButtonLink" href="/core/delete_countrecord/{{ item.id }}">
-                    <button type="button" class="btn btn-outline-danger">Delete</button>
-                </a>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <a id="modalButtonLink" href="/core/delete_countrecord/{{ item.id }}">
+                        <button type="button" class="btn btn-outline-danger">Delete</button>
+                    </a>
                 </div>
             </div>
             </div>
@@ -72,22 +81,5 @@
 {% endblock content %}
 
 {% block belowdeckscripts %}
-    <script>
-        
-
-        $(document).ready(function() {
-            let $modalButtonLink = $("#modalButtonLink");
-            const deleteButtons = document.querySelectorAll('.deleteBtn')
-            deleteButtons.forEach(delButton => {
-                delButton.addEventListener('click', function setModalButton(e) {
-                    let count_id = 'ok';
-                    count_id = e.target.id;
-                    console.log(count_id);
-                    $modalButtonLink.attr("href", `/core/delete_countrecord/${count_id}`);
-                });
-            });
-        });
-
-    </script>
     <script src="{% static 'core/js/countRecordUI.js' %}"></script>
 {% endblock %}
